user.css
/* ... */
.main-playButton-PlayButton:focus,
.main-playButton-PlayButton:hover {
 background-color: transparent;
}

.main-playButton-PlayButton>button {
 width: 40px;
 height: 40px;
}

.main-playButton-PlayButton>button>span {
 display: none;
}

/* error content */

.main-pageErrorTemplate-errorBody {
  min-height: calc((100vh - 64px) - 105px);
}

.main-pageErrorTemplate-errorBody svg {
  margin: 0;
}


/* spicetify */

#spicetify-sidebar-config {
  flex-direction: column;
  top: -60px !important;
}

#spicetify-show-list >* {
  padding: 0px;
}

.toggle-module__toggle-input___ceLM4_marketplace:checked~.toggle-module__toggle-indicator-wrapper___6Lcp0_marketplace {
  background-color: var(--spice-accent);
}

.toggle-module__toggle-indicator___nCxwE_marketplace {
  background: var(--spice-card) !important;
}

/* spicetify extensions */

.main-topBar-button[title="Popup Lyrics"],
.main-topBar-button[title="Full App Display"],
.main-topBar-button[title="Bookmark"] {
  background-color: var(--spice-card) !important;
}

.iUSAh1wdhXLk9hHSbkCA.hsrxlVHxK0zZrgarkxuA:after{
  border-bottom: none;
}


.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard{
  color:var(--spice-alt-text);
}

.UyzJidwrGk3awngSGIwv,
.X1lXSiVj0pzhQCUo_72A,
.main-addButton-button[aria-checked=false] {
  color: var(--spice-text);
}

.JzZyf6OGCGtdscOZGt8Y {
  background: var(--spice-card);
  border: 1px solid var(--spice-player-border);
  border-radius: var(--border-radius-3);
}

.QZhV0hWVKlExlKr266jo,
.QZhV0hWVKlExlKr266jo::placeholder,
.EsqEJ_NPrHsPkTbX4FW8,
._bjbHn5TABOW2s5LsEGX,
.JzZyf6OGCGtdscOZGt8Y,
.wCl7pMTEE68v1xuZeZiB,
.w6j_vX6SF5IxSXrrkYw5 {
  color: var(--spice-subtext);
}

/* New lyrics style */

#lyrics-backdrop {
  filter: brightness(0.65) saturate(1.4);
  position: absolute;
  width: 100%;
  height: 100%;
}

.lyrics-lyrics-background {
  visibility: hidden !important;
}

.lyrics-lyricsContent-lyric,
.lyrics-lyricsContent-description,
.lyrics-lyricsContent-provider {
  color: rgb(255 255 255 / 30%) !important;
}

.lyrics-lyricsContent-lyric {
  transform-origin: left;
  padding: 2px;
}

.lyrics-lyricsContent-highlight,
.C3pBU1DsOUJJOAv89ZFT {
  color: rgba(255, 255, 255, 0.75) !important;
}

.lyrics-lyricsContent-unsynced,
.lyrics-lyricsContent-active,
.lyrics-lyricsContent-lyric:hover {
  color: rgb(255 255 255) !important;
}

.lyrics-lyricsContent-lyric:active {
  transform: scale(0.95);
  transition: transform 50ms ease-in;
}

.lyrics-lyricsContent-lyric:active::after {
  transform: scale(1);
  transition: transform 50ms ease-out;
}

.lyrics-lyricsContent-active {
  animation: lyric-active 400ms ease-out forwards;
}

.lyrics-lyricsContent-highlight.previous,
.lyrics-lyricsContent-lyric.previous {
  animation: lyric-previous 400ms ease-in forwards;
}

@keyframes lyric-active {
  from {
    text-shadow: none;
    scale: 1
  }

  to {
    text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
    scale: 1.1
  }
}

@keyframes lyric-previous {
  from {
    text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
    scale: 1.1
  }

  to {
    text-shadow: none;
    scale: 1
  }
}
  
/* lyrics pages fix */

.lyrics-lyrics-background {
  margin-top: -64px;
}

.lyrics-lyricsContainer-LyricsBackground {
  margin-bottom: -110px;
  margin-top: -10px;
}

.Q2RPoHcoxygOoPLXLMww{
  padding-bottom: 350px;
  padding-right: 150px;
}

.hW9km7ku6_iggdWDR_Lg{
  margin-top: 0;
}

.K8PtC1Way9XetxDGwCGx {
  background-color: var(--spice-main);
  color: var(--spice-text);
}

.hKccLC {
  background-color: var(--spice-accent);
  color: var(--spice-alt-text);
  border-radius: var(--border-radius-3);
}

.ksogXh:hover{
  color: var(--spice-rgb-subtext);
}

.awGNDbf1c8TGBAFR0pv8 button:focus {
  outline: 0px auto #3673d4;
  outline-offset: 0px;
}

.main-view-container__scroll-node-child{
  padding-bottom: 118px;
}

.jvWzgRWM_y_9FFTYRCcB{
  padding: 6px;
}

.Z35BWOA10YGn5uc9YgAp .WWDxafTPs4AgThdcX5jN{
  border-radius:var(--border-radius-3) ;
}

.main-trackList-playsHeader{
  width: 12.8ch;
}

.main-trackList-durationHeader{
  margin-left: 30px;
}

.main-trackList-rowSectionEnd{
  margin: auto;
}

.main-trackList-column{
  padding-left: 10px;
}

.main-trackList-rowSectionVariable[aria-colindex="3"] .cPwEdQ , .main-trackList-rowSectionVariable[aria-colindex="3"] .jsV182e49Puwz9SIYt2J {
  padding-left: 8.5px;
}

.main-trackList-rowSectionVariable[aria-colindex="4"] .eDbSCl  {
  padding-left: 14.5px;
}

.main-trackList-rowSectionVariable[aria-colindex="3"] .main-trackList-rowPlayCount {
  padding-left: 0px;
}

.Kujbn0F68QOf_o44cNxw {
  background-color: var(--spice-accent) !important;
  border: 2px solid var(--spice-main) !important;
}

input:checked~.x-toggle-indicatorWrapper {
  background-color: var(--spice-accent) !important;
}

.npv-background-image__overlay {
  background-color: rgba(var(--spice-rgb-layer-shadow),.7) !important;
}

nav .main-rootlist-wrapper > :nth-child(2) {
  transform: translateY(0) !important;
}

.main-rootlist-rootlistItemOverlay {
  display: none;
}

/* Fix Spotify moving up caused by lyric page */

.Root__top-container {
  position: fixed;
}

/* Fix lyrics get covered by controls */

.lyrics-lyrics-container {
  margin: 0 !important;
}

.lyrics-lyrics-contentContainer {
  margin-bottom: 120px;
}

.lyrics-config-button-container {
  padding-bottom: 20px;
}

/* Spicetify power bar */

#power-bar-container {
  border-radius: var(--border-radius-3) !important;
}

#power-bar-wrapper {
  background-color: rgba(var(--spice-rgb-main), 0.8) !important;
  backdrop-filter: blur(50px);
}

#power-bar-search.has-suggestions {
  border-bottom: none !important;
  width: 100% !important;
}

#power-bar-search:focus-visible {
  border-bottom: 2px solid var(--spice-accent) !important;
  border-radius: var(--border-radius-3) !important;
}

#suggestions-container h5 {
  font-size: 1.1em !important;
  color: var(--spice-subtext) !important;
}

.suggestions-category {
  border: none !important;
  padding-bottom: 0 !important;
}
/* ... */

